# arcdps-squad-ready-plugin

./: .gitignore  .gitmodules  Audio.cpp  Audio.h  CMakeLists.txt  CMakePresets.json  Cargo.toml  Globals.cpp  Globals.h  LICENSE  LICENSE-THIRD-PARTY  LICENSE_thirdparty  Logging.cpp  Logging.h  Makefile  README  README.md  Settings.h  SettingsUI.cpp  SettingsUI.h  SquadTracker.cpp  SquadTracker.h  arcdps-squad-ready-plugin.rc  arcdps-squad-ready-plugin.sln  arcdps-squad-ready-plugin.vcxproj  arcdps-squad-ready-plugin.vcxproj.filters  build.rs  dllmain.cpp  vcpkg-configuration.json  vcpkg.json
.github/workflows/: build.yaml  msbuild.yaml  pre-commit.yaml  rust.yaml
cmake/: toolchain-mingw-w64.cmake  toolchain-mingw.cmake
cmake/triplets/: x64-mingw-static.cmake  x64-windows-static.cmake
modules/imgui_msbuild/: imgui.vcxproj
squad_ready/: Audio.cpp  Audio.h  CMakeLists.txt  Error.h  Globals.cpp  Globals.h  LICENSE-THIRD-PARTY  Logging.cpp  Logging.h  Settings.cpp  Settings.h  SettingsUI.cpp  SettingsUI.h  SquadTracker.cpp  SquadTracker.h  arcdps-squad-ready-plugin.rc  arcdps-squad-ready-plugin.vcxproj  arcdps-squad-ready-plugin.vcxproj.filters  dllmain.cpp  resource.h  vcpkg.json
src/: audio.rs  file_picker.rs  lib.rs  panic_handler.rs  plugin.rs  settings.rs  settings_ui.rs  squad_tracker.rs  ui.rs  update_checker.rs
src/audio/: mod.rs  player.rs  sounds.rs
vcpkg-overlay-ports/cpr/: portfile.cmake  vcpkg.json
vcpkg-overlay-ports/curl/: portfile.cmake  vcpkg.json
workflow/: stamp-version.py
