[package]
name = "arcdps-squad-ready"
version = "1.1.0"
edition = "2021"
build = "build.rs"

[lib]
name = "arcdps_squad_ready"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
arc_util = { git = "https://github.com/zerthox/arcdps-utils", features = ["settings", "log"] }
arcdps = { git = "https://github.com/zerthox/arcdps-rs", features = ["extras", "log", "serde"] }
log = { version = "0.4", features = ["max_level_trace", "release_max_level_info"] }
once_cell = "1.21"
rodio = { version = "0.21", features = ["symphonia-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
windows = { version = "0.62", features = ["Win32_UI_WindowsAndMessaging", "Win32_Storage_FileSystem"] }

[build-dependencies.windows_exe_info]
version = "0.4.2"

[profile.release]
lto = true

[profile.release-with-debug]
inherits = "release"
debug = true
